# markov-blanket-fs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 00_roadmap.md  01_information_theory.md  02_conditional_independence.md  03_graphical_models.md  04_markov_blanket_theory.md  05_discovery_algorithms.md  06_ci_tests.md  references.bib
examples/: compare_algorithms.py  quickstart.py
exercises/: 01_information_theory.md  02_conditional_independence.md  03_graphical_models.md  04_markov_blanket_theory.md  05_discovery_algorithms.md  06_ci_tests.md
exercises/solutions/: 01_information_theory.md  02_conditional_independence.md  03_graphical_models.md  04_markov_blanket_theory.md  05_discovery_algorithms.md  06_ci_tests.md
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
notebooks/: 01_entropy_and_mi.ipynb  02_conditional_independence_demo.ipynb  03_markov_blanket_intuition.ipynb  04_grow_shrink_from_scratch.ipynb  05_benchmark_on_known_network.ipynb  README.md
src/mbfs/: __init__.py  selector.py
src/mbfs/algorithms/: __init__.py  base.py  grow_shrink.py  hiton_mb.py  iamb.py  inter_iamb.py  mmmb.py
src/mbfs/ci_tests/: __init__.py  base.py  chi_square.py  fisher_z.py  g_test.py  mi_test.py
src/mbfs/datasets/: __init__.py  synthetic.py
src/mbfs/info_theory/: __init__.py  entropy.py  estimators.py  mutual_info.py
src/mbfs/utils/: __init__.py  caching.py  discretization.py
tests/: test_against_ground_truth.py  test_ci_tests.py  test_info_theory.py
