[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbfs"
version = "0.1.0"
description = "Feature selection based on the Markov Blanket — a learn-by-building library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "networkx>=3", "matplotlib", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
